actualizo menu-item para navegar con Router HOC y empiezo a agragar paginas

--- a/src/paginas/paginahome/paginahome.estilos.scss
+++ b/src/paginas/paginahome/paginahome.estilos.scss
@@ -1,8 +1,9 @@
-.paginaHome {
+.pagina-home {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px 80px;
+    
 }
 
 
