--- a/src/componentes/menu-item/menu-item.estilos.scss
+++ b/src/componentes/menu-item/menu-item.estilos.scss
@@ -1,12 +1,12 @@
 .menu-item {
     min-width: 33vw;
-    height: 240px;
+    height: 260px;
     flex: 1 1 auto;
     display: flex;
     align-items: center;
     justify-content: center;
     border: 1px solid black;
-    margin: 0 7.5px 15px;
+    margin: 0 10px 20px;
     overflow: hidden;
 
     &:hover {
@@ -34,7 +34,9 @@
       width: 100%;
       height: 100%;
       background-position: center;
-      background-size: cover;
+      background-size: 100% 100%;
+      background-repeat: no-repeat;
+      
     }
   
     .contenido {
